8.5.2

- Fixed wrong implementation of forEachRemaining() in hash-based
  containers.

8.5.1

- Fixed bug in AbstractIndexBasedBigIterator that was affecting
  iterations on big lists.

- Added missing disambiguation method for type-specific Map.merge().

8.5.0

- Added type-specific spliterators and primitive stream methods to all
  Collection types. Thanks to C. Sean Young <csyoung@google.com> for this
  massive code contribution.

- Added fast spliterator implementations for most concrete types. The only
  Collection types that do not currently have an optimized spliterator are
  RBTreeSet/Map, AVLTreeSet/Map, and ArrayFrontCodedList. These are
  planned for a future version. Thanks to C. Sean Young
  <csyoung@google.com> for implementing this feature.

- Added a lot of special cases for AbstractList's methods to better take
  advantage of RandomAccess based lists (the base List interface's default
  methods will still use the iterator based versions always). Thanks to C.
  Sean Young <csyoung@google.com> for implementing this feature.

- New immutable array-based lists and associated List.of() methods.

- Type specific versions of Predicate have been added.
  Methods that take predicates (mainly Collection.removeIf) have been
  updated to have an overload that takes that.
  A consequence of this change is that removeIf(IntPredicate) on
  ByteCollection, ShortCollection, and CharCollection have been deprecated
  in favor of removeIf(Byte/Short/CharPredicate), which does not do widening casts.
  If you have an implementation of ByteCollection, ShortCollection, or CharCollection
  that implements removeIf(IntPredicate), you should update it to instead override
  removeIf(Byte/Short/CharPredicate).

- Type-specific map methods merge() and computeIfAbsent() now have the
  same name as in the JDK. The older names (with a type infix) have been
  deprecated.

- computeIfAbsentPartial() has been renamed computeIfAbsent() so that