@@ -566,13 +566,13 @@ public class OPEN_HASH_SET KEY_GENERIC extends ABSTRACT_SET KEY_GENERIC implemen
 
 #else
 	/** Creates a new hash set with {@link Hash#DEFAULT_LOAD_FACTOR} as load factor
-	 * copying the elements of an array.
+	 * using the given elements.
 	 *
-	 * @param a an array to be copied into the new hash set.
+	 * @param e elements that will be stored into the new hash set.
 	 */
 
-	public OPEN_HASH_SET(final KEY_GENERIC_TYPE[] a) {
-		this(a, DEFAULT_LOAD_FACTOR);
+	public OPEN_HASH_SET(final KEY_GENERIC_TYPE... e) {
+		this(e, DEFAULT_LOAD_FACTOR);
 	}
 
 	/** Creates a new empty hash set. 
